--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,18 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>This is FRONTEND</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com"> 
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<section id="first">
-		<button id="button-1">button 1</button>
-		<button id="button-2">button 2</button>
-	</section>
-	<section id="second">
-		<button id="button-3">button 3</button>
-	</section>
+	<div id="root"></div>
 </body>
 </html>
